--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-Coder Manual Project application
+Subscription-based Project Application
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
